// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createLoggerMiddleware test encryption happy case 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "how": Object {
          "apiGateway": Object {
            "context": Object {
              "awsRequestId": "11111111-1111-1111-1111-111111111111",
            },
          },
          "userIdentity": Object {
            "jti": "AT.FakeJTIValue",
          },
        },
        "logMetadata": Object {
          "category": "Audit Event",
          "encryptedFields": Array [
            "who.userIdentity.sub",
            "who.userIdentity.fhirUser",
            "what.apiGateway.event.queryStringParameters",
            "what.apiGateway.event.pathParameters.proxy",
            "where.requestContext.identity.sourceIp",
            "responseOther.userIdentity.launch-response-patient",
          ],
          "payLoadToEncrypt": Object {
            "responseOther": Object {
              "userIdentity": Object {
                "launch-response-patient": "https://example.execute-api.us-east-1.amazonaws.com/dev/Patient/22222222-2222-2222-2222-222222222222",
              },
            },
            "what": Object {
              "apiGateway": Object {
                "event": Object {
                  "pathParameters": Object {
                    "proxy": "patient/00000000-0000-0000-0000-000000000000",
                  },
                  "queryStringParameters": Object {
                    "name": "FakeName",
                  },
                },
              },
            },
            "where": Object {
              "requestContext": Object {
                "identity": Object {
                  "sourceIp": "0.0.0.0",
                },
              },
            },
            "who": Object {
              "userIdentity": Object {
                "fhirUser": "https://example.execute-api.us-east-1.amazonaws.com/dev/Practitioner/00000000-0000-0000-0000-000000000000",
                "sub": "example@example.com",
              },
            },
          },
          "timestamp": "2020-01-01T00:00:00.000Z",
          "uid": "00000000-0000-0000-0000-000000000000",
        },
        "requestOther": Object {
          "requestContext": Object {
            "stage": "dev",
          },
        },
        "responseOther": Object {
          "userIdentity": Object {
            "aud": "FakeAudience",
            "auth-time": "2023-01-10T21:40:22.000Z",
            "exp": "1975-04-21T19:04:04.000Z",
            "iat": "1975-04-21T18:47:24.000Z",
            "iss": "FakeIssuer",
            "launch-response-patient": "https://example.execute-api.us-east-1.amazonaws.com/dev/Patient/encrypted",
            "scp": Array [
              "FakeScope1",
              "FakeScope2",
              "FakeScope3",
            ],
          },
        },
        "what": Object {
          "apiGateway": Object {
            "event": Object {
              "httpMethod": "GET",
              "pathParameters": Object {
                "proxy": "patient/encrypted",
              },
              "queryStringParameters": "encrypted",
            },
          },
          "requestContext": Object {
            "httpMethod": "GET",
            "path": "/dev/Patient",
          },
          "userIdentity": Object {
            "scopes": Array [
              "FakeScope1",
              "FakeScope2",
              "FakeScope3",
            ],
            "usableScopes": Array [
              "FakeScope2",
              "FakeScope3",
            ],
          },
        },
        "when": Object {
          "requestContext": Object {
            "requestTimeEpoch": "1970-01-20T08:49:29.044Z",
          },
        },
        "where": Object {
          "User-agent": "FakeUserAgent",
          "apiGateway": Object {
            "Context": Object {
              "logGroupName": "FakeLogGroupName",
              "logStreamName": "FakeLogStreamName",
            },
          },
          "requestContext": Object {
            "domainName": "FakeDomainName",
            "identity": Object {
              "sourceIp": "encrypted",
            },
          },
        },
        "who": Object {
          "apiKeyId": "FakeApiKeyId",
          "userIdentity": Object {
            "cognito:groups": undefined,
            "cognito:username": undefined,
            "custom:tenantId": undefined,
            "fhirUser": "https://example.execute-api.us-east-1.amazonaws.com/dev/Practitioner/encrypted",
            "sub": "encrypted",
          },
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`createLoggerMiddleware test encryption test null value in a field for encryption case 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "how": Object {
          "apiGateway": Object {
            "context": Object {
              "awsRequestId": "11111111-1111-1111-1111-111111111111",
            },
          },
          "userIdentity": Object {
            "jti": "AT.FakeJTIValue",
          },
        },
        "logMetadata": Object {
          "category": "Audit Event",
          "encryptedFields": Array [
            "who.userIdentity.sub",
            "who.userIdentity.fhirUser",
            "what.apiGateway.event.pathParameters.proxy",
            "where.requestContext.identity.sourceIp",
          ],
          "payLoadToEncrypt": Object {
            "what": Object {
              "apiGateway": Object {
                "event": Object {
                  "pathParameters": Object {
                    "proxy": "patient/00000000-0000-0000-0000-000000000000",
                  },
                },
              },
            },
            "where": Object {
              "requestContext": Object {
                "identity": Object {
                  "sourceIp": "0.0.0.0",
                },
              },
            },
            "who": Object {
              "userIdentity": Object {
                "fhirUser": "https://example.execute-api.us-east-1.amazonaws.com/dev/Practitioner/00000000-0000-0000-0000-000000000000",
                "sub": "example@example.com",
              },
            },
          },
          "timestamp": "2020-01-01T00:00:00.000Z",
          "uid": "00000000-0000-0000-0000-000000000000",
        },
        "requestOther": Object {
          "requestContext": Object {
            "stage": "dev",
          },
        },
        "responseOther": Object {
          "userIdentity": Object {
            "aud": "FakeAudience",
            "auth-time": "2023-01-10T21:40:22.000Z",
            "exp": "1975-04-21T19:04:04.000Z",
            "iat": "1975-04-21T18:47:24.000Z",
            "iss": "FakeIssuer",
            "launch-response-patient": "",
            "scp": Array [
              "FakeScope1",
              "FakeScope2",
              "FakeScope3",
            ],
          },
        },
        "what": Object {
          "apiGateway": Object {
            "event": Object {
              "httpMethod": "GET",
              "pathParameters": Object {
                "proxy": "patient/encrypted",
              },
              "queryStringParameters": null,
            },
          },
          "requestContext": Object {
            "httpMethod": "GET",
            "path": "/dev/Patient",
          },
          "userIdentity": Object {
            "scopes": Array [
              "FakeScope1",
              "FakeScope2",
              "FakeScope3",
            ],
            "usableScopes": Array [
              "FakeScope2",
              "FakeScope3",
            ],
          },
        },
        "when": Object {
          "requestContext": Object {
            "requestTimeEpoch": "1970-01-02T22:28:57.044Z",
          },
        },
        "where": Object {
          "User-agent": "FakeUserAgent",
          "apiGateway": Object {
            "Context": Object {
              "logGroupName": "FakeLogGroupName",
              "logStreamName": "FakeLogStreamName",
            },
          },
          "requestContext": Object {
            "domainName": "FakeDomainName",
            "identity": Object {
              "sourceIp": "encrypted",
            },
          },
        },
        "who": Object {
          "apiKeyId": "FakeApiKeyId",
          "userIdentity": Object {
            "cognito:groups": undefined,
            "cognito:username": undefined,
            "custom:tenantId": undefined,
            "fhirUser": "https://example.execute-api.us-east-1.amazonaws.com/dev/Practitioner/encrypted",
            "sub": "encrypted",
          },
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`createLoggerMiddleware test encryption test reference launch context value for encryption case 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "how": Object {
          "apiGateway": Object {
            "context": Object {
              "awsRequestId": "11111111-1111-1111-1111-111111111111",
            },
          },
          "userIdentity": Object {
            "jti": "AT.FakeJTIValue",
          },
        },
        "logMetadata": Object {
          "category": "Audit Event",
          "encryptedFields": Array [
            "who.userIdentity.sub",
            "who.userIdentity.fhirUser",
            "what.apiGateway.event.pathParameters.proxy",
            "where.requestContext.identity.sourceIp",
            "responseOther.userIdentity.launch-response-patient",
          ],
          "payLoadToEncrypt": Object {
            "responseOther": Object {
              "userIdentity": Object {
                "launch-response-patient": "Patient/22222222-2222-2222-2222-222222222222",
              },
            },
            "what": Object {
              "apiGateway": Object {
                "event": Object {
                  "pathParameters": Object {
                    "proxy": "patient/00000000-0000-0000-0000-000000000000",
                  },
                },
              },
            },
            "where": Object {
              "requestContext": Object {
                "identity": Object {
                  "sourceIp": "0.0.0.0",
                },
              },
            },
            "who": Object {
              "userIdentity": Object {
                "fhirUser": "https://example.execute-api.us-east-1.amazonaws.com/dev/Practitioner/00000000-0000-0000-0000-000000000000",
                "sub": "example@example.com",
              },
            },
          },
          "timestamp": "2020-01-01T00:00:00.000Z",
          "uid": "00000000-0000-0000-0000-000000000000",
        },
        "requestOther": Object {
          "requestContext": Object {
            "stage": "dev",
          },
        },
        "responseOther": Object {
          "userIdentity": Object {
            "aud": "FakeAudience",
            "auth-time": "2023-01-10T21:40:22.000Z",
            "exp": "1975-04-21T19:04:04.000Z",
            "iat": "1975-04-21T18:47:24.000Z",
            "iss": "FakeIssuer",
            "launch-response-patient": "Patient/encrypted",
            "scp": Array [
              "FakeScope1",
              "FakeScope2",
              "FakeScope3",
            ],
          },
        },
        "what": Object {
          "apiGateway": Object {
            "event": Object {
              "httpMethod": "GET",
              "pathParameters": Object {
                "proxy": "patient/encrypted",
              },
              "queryStringParameters": null,
            },
          },
          "requestContext": Object {
            "httpMethod": "GET",
            "path": "/dev/Patient",
          },
          "userIdentity": Object {
            "scopes": Array [
              "FakeScope1",
              "FakeScope2",
              "FakeScope3",
            ],
            "usableScopes": Array [
              "FakeScope2",
              "FakeScope3",
            ],
          },
        },
        "when": Object {
          "requestContext": Object {
            "requestTimeEpoch": "1970-01-02T22:28:57.044Z",
          },
        },
        "where": Object {
          "User-agent": "FakeUserAgent",
          "apiGateway": Object {
            "Context": Object {
              "logGroupName": "FakeLogGroupName",
              "logStreamName": "FakeLogStreamName",
            },
          },
          "requestContext": Object {
            "domainName": "FakeDomainName",
            "identity": Object {
              "sourceIp": "encrypted",
            },
          },
        },
        "who": Object {
          "apiKeyId": "FakeApiKeyId",
          "userIdentity": Object {
            "cognito:groups": undefined,
            "cognito:username": undefined,
            "custom:tenantId": undefined,
            "fhirUser": "https://example.execute-api.us-east-1.amazonaws.com/dev/Practitioner/encrypted",
            "sub": "encrypted",
          },
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
